NIFI-15226 Review suggestions